# panda

./: Cargo.toml
.github/: copilot-instructions.md
data/: panda.db  schema.sql
src/: lib.rs  main.rs
src/base/: mod.rs  repository.rs  repository_traits.rs
src/base/repository/: article_repository.rs  category_repository.rs  feed_repository.rs  mod.rs  tag_repository.rs
src/data/: database.rs  migration.rs  mod.rs  types.rs
src/data/repositories/: article_repository.rs  category_repository.rs  feed_repository.rs  mod.rs  tag_repository.rs
src/models/: article.rs  category.rs  feed.rs  mod.rs  tag.rs
src/services/: article.rs  mod.rs  opml_service.rs  sync.rs  sync_service.rs  webview_service.rs
src/services/opml/: mod.rs  opml_service.rs
src/services/rss/: mod.rs  rss_service.rs
src/services/sync/: mod.rs  sync_service.rs
src/services/webview/: mod.rs  webview_init.js  webview_service.rs
src/ui/: context.rs  mod.rs  styles.rs  theme.rs
src/ui/components/: article_list.rs  article_viewer.rs  category_manager.rs  feed_manager.rs  mod.rs  settings.rs  sidebar.rs
src/ui/styles/: mod.rs  theme.rs
src/ui/theme/: colors.rs
src/ui/views/: mod.rs
src/ui/views/main/: main_view.rs  mod.rs
src/utils/: db_inspector.rs  mod.rs
