[package]
name = "panda"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.7"
feed-rs = "1.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = { version = "2.3", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tao = "0.32.8"
wry = { version = "0.50.5", features = ["default"] }
egui = "0.26.2"
eframe = "0.26.2"
rfd = "0.12"
rand = "0.8"
quick-xml = "0.31.0"
