[package]
name = "panda"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.26"
feed-rs = "1.3"
log = "0.4"
open = "5.0"
quick-xml = "0.31"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29", features = ["bundled", "backup", "blob", "chrono", "functions", "trace", "uuid", "serde_json", "url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
wry = "0.50"
